Change the setting of translate.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "npm run clean && webpack --progress --colors --bail",
     "clean": "rimraf ./dist && mkdirp dist && rimraf ./playground && mkdirp playground",
     "deploy": "touch playground/.nojekyll && gh-pages -t -d playground -m \"Build for $(git log --pretty=format:%H -n1)\"",
-    "i18n:push": "tx-push-src scratch-editor paint-editor ./translations/en.json",
-    "i18n:src": "rimraf ./translations/messages && babel src > tmp.js && rimraf tmp.js && ./scripts/build-i18n-source.js ./translations/messages/ ./translations/",
+    "i18n:push": "tx-push-src scratch-editor-2 paint-editor ./translations/en.json",
+    "i18n:src": "rimraf ./translations/messages && babel src > tmp.js && rimraf tmp.js && node ./scripts/build-i18n-source.js ./translations/messages/ ./translations/",
     "lint": "eslint . --ext .js,.jsx",
     "start": "webpack-dev-server",
     "test": "npm run lint && npm run unit && NODE_ENV=production npm run build",
